Adjusted alignments and dimensions of movie item, fixed scalability of carousel container and added some props.

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,3 +3,7 @@
     flex-direction: column;
     margin: 0 20px 20px 20px;
 }
+
+.heading {
+    margin-bottom: 0;
+}
