--- a/src/shared/MovieList/MovieItem.module.css
+++ b/src/shared/MovieList/MovieItem.module.css
@@ -1,45 +1,52 @@
 .movieItem {
-  position: relative;
-  margin: 10px;
-  width: 240px;
-  height: 350px;
-  border-radius: 6px;
+    position: relative;
+    margin: 10px;
+    width: 240px;
+    height: 360px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.ratingBadge {
-  position: absolute;
-  top: 2px;
-  right:4px;
-  width: 40px;
 
-  color: #012a4a;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
+.ratingBadge {
+    position: absolute;
+    top: 2px;
+    right: 4px;
+    width: 40px;
+    color: #012a4a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
+
 .poster {
-  margin: 1px;
-  border-radius: 4px;
+    border-radius: 4px;
 }
+
 .movieInfo {
-  margin-top: 4px;
+    margin: 4px;
 }
 
 .star {
-  height: 40px;
+    height: 40px;
 }
 
 .rating {
-  position: absolute;
-  margin: 0 6px;
+    position: absolute;
+    margin: 0 6px;
+    font-weight: 700;
 }
+
 a.title:link {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
 
 a.title:hover {
-  text-decoration: underline;
+    font-weight: 700;
+    background-color: transparent;
 }
 
 a.title:visited {
